Improved cropping in tiles view and fixed dropzone issue when destroying (#721)

--- a/scss/modules/datagrid.scss
+++ b/scss/modules/datagrid.scss
@@ -306,7 +306,7 @@
 
     .selected-elements {
         display: block;
-        height: 20px;
+        height: 40px;
         @include transition(height 200ms);
         overflow: hidden;
         &.indent {
